--- a/about.html
+++ b/about.html
@@ -181,6 +181,18 @@
       transform: scale(0.92);
     }
 
+    /* Emoji Explosion Animation */
+    @keyframes emojiExplosion {
+      0% {
+        transform: scale(1) translate(0, 0);
+        opacity: 1;
+      }
+      100% {
+        transform: scale(2) translate(var(--x), var(--y));
+        opacity: 0;
+      }
+    }
+
   </style>
 </head>
 <body>
@@ -277,17 +289,17 @@
         emoji.style.left = '50%';
         emoji.style.top = '50%';
         emoji.style.fontSize = '28px';
-        emoji.style.transition = 'transform 1s ease-out';
+        emoji.style.transition = 'transform 1s ease-out, opacity 1s ease-out';
 
         const angle = Math.random() * 2 * Math.PI;
         const radius = 150 + Math.random() * 300;
         const x = Math.cos(angle) * radius;
         const y = Math.sin(angle) * radius;
 
-        setTimeout(() => {
-          emoji.style.transform = `translate(${x}px, ${y}px) scale(1.5)`;
-        }, 10);
+        emoji.style.setProperty('--x', `${x}px`);
+        emoji.style.setProperty('--y', `${y}px`);
 
+        emoji.style.animation = `emojiExplosion 1s forwards`;
         explosionContainer.appendChild(emoji);
       }
 
