--- a/about.html
+++ b/about.html
@@ -193,6 +193,11 @@
         opacity: 0;
       }
     }
+  .icon:active,
+  .send-button:active {
+    transform: scale(0.92);
+    transition: transform 0.1s ease-out;
+    }
 
   </style>
 </head>
