--- a/photos.html
+++ b/photos.html
@@ -11,26 +11,30 @@
       font-family: 'SF Pro Display', sans-serif;
       background-color: white;
       width: 390px;
-      height: 800px; /* 줄임 */
+      height: 800px;
       overflow: hidden;
       position: relative;
     }
 
-    .navbar {
-      z-index: 1;
-      padding: 20px 12px 6px;
+    .overlay {
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 110px;
       background: linear-gradient(to bottom, rgba(0,0,0,0.5), rgba(0,0,0,0));
       color: white;
+      padding: 20px 12px 0;
+      z-index: 1;
+    }
+
+    .overlay span {
+      display: block;
       font-size: 17px;
       font-weight: 500;
-      line-height: 1.3;
+      margin-bottom: 4px;
     }
 
-    .navbar span {
-      display: block;
-    }
-
-    .title {
+    .overlay .title {
       font-size: 22px;
       font-weight: 600;
     }
@@ -40,6 +44,7 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 1px;
       background-color: #e5e5e5;
+      margin-top: -10px;
     }
 
     .photo {
@@ -53,7 +58,7 @@
       text-align: center;
       font-size: 15px;
       color: #444;
-      margin: 6px 0 0;
+      margin: 4px 0;
       font-weight: 500;
     }
 
@@ -90,13 +95,13 @@
   </style>
 </head>
 <body>
-  <div class="navbar">
+  <div class="overlay">
     <span>＜ 앨범</span>
     <div class="title">최근 항목</div>
   </div>
 
   <div class="grid">
-    <img src="pimages/p1.jpg" class="photo">
+    <img src="pimages/p1.jpg" class="photo" style="margin-top: -30px;">
     <img src="pimages/p2.jpg" class="photo">
     <img src="pimages/p3.jpg" class="photo">
     <img src="pimages/p4.jpg" class="photo">
@@ -105,9 +110,6 @@
     <img src="pimages/p7.jpg" class="photo">
     <img src="pimages/p8.jpg" class="photo">
     <img src="pimages/p9.jpg" class="photo">
-    <img src="pimages/p10.jpg" class="photo">
-    <img src="pimages/p11.jpg" class="photo">
-    <img src="pimages/p12.jpg" class="photo">
   </div>
 
   <div class="photo-count">6,963장의 사진, 40개의 비디오</div>
