--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=390, user-scalable=no">
+  <meta name="viewport" content="width=390, height=810, user-scalable=no, initial-scale=1.0">
   <title>Photos</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=SF+Pro+Display&display=swap">
   <style>
@@ -11,7 +11,7 @@
       font-family: 'SF Pro Display', sans-serif;
       background-color: white;
       width: 390px;
-      height: 800px;
+      height: 810px;  /* 높이를 약간 줄임 */
       overflow: hidden;
       position: relative;
     }
