--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=390, user-scalable=no" />
   <title>iMessage</title>
   <style>
+    /* 기존 스타일 유지 */
+
     * {
       box-sizing: border-box;
       margin: 0;
@@ -167,22 +169,21 @@
       }
     }
 
-  .image-message {
-    width: 200px;
-    border-radius: 18px;
-    object-fit: cover;
-    opacity: 0;
-    animation: messageSend 0.3s ease forwards;
-    transition: transform 0.15s ease, filter 0.15s ease;
-    cursor: pointer;
-  }
+    .image-message {
+      width: 200px;
+      border-radius: 18px;
+      object-fit: cover;
+      opacity: 0;
+      animation: messageSend 0.3s ease forwards;
+      transition: transform 0.15s ease, filter 0.15s ease;
+      cursor: pointer;
+    }
 
-  .image-message:active {
-    transform: scale(0.92);
-    filter: brightness(85%);
-  }
+    .image-message:active {
+      transform: scale(0.92);
+      filter: brightness(85%);
+    }
 
-    /* Emoji Explosion Animation */
     @keyframes emojiExplosion {
       0% {
         transform: scale(1) translate(0, 0);
@@ -193,17 +194,52 @@
         opacity: 0;
       }
     }
-  .icon:active,
-  .send-button:active {
-    transform: scale(0.92);
-    transition: transform 0.1s ease-out;
+
+    .icon:active,
+    .send-button:active {
+      transform: scale(0.92);
+      transition: transform 0.1s ease-out;
     }
 
-  .zoom-out {
-  transform: scale(1.05);
-  opacity: 0;
-  transition: transform 0.4s ease, opacity 0.4s ease;
-}
+    .zoom-out {
+      transform: scale(1.05);
+      opacity: 0;
+      transition: transform 0.4s ease, opacity 0.4s ease;
+    }
+
+    /* 새로 추가: 오버레이 + 이모티콘 UI */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 390px;
+      height: 844px;
+      backdrop-filter: blur(12px);
+      background-color: rgba(255, 255, 255, 0.25);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1000;
+    }
+
+    .emoji-popup {
+      display: flex;
+      background: white;
+      padding: 12px 16px;
+      border-radius: 24px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+      gap: 12px;
+      font-size: 24px;
+      cursor: pointer;
+    }
+
+    .emoji-popup div {
+      transition: transform 0.2s ease;
+    }
+
+    .emoji-popup div:active {
+      transform: scale(1.3);
+    }
 
   </style>
 </head>
@@ -233,14 +269,11 @@
         img.src = 'images/m2.png';
         img.className = 'image-message';
 
-      img.onclick = (e) => {
-        e.preventDefault();
-        img.classList.add('zoom-out');
-        setTimeout(() => {
-        window.location.href = 'photos.html';
-        }, 400); // 0.4초 후 이동
-      };
-
+        img.onclick = (e) => {
+          e.preventDefault();
+          img.classList.add('zoom-out');
+          showEmojiPopup();
+        };
 
         wrapper.appendChild(img);
       } else {
@@ -283,6 +316,30 @@
       input.value = '';
     }
 
+    function showEmojiPopup() {
+      const overlay = document.createElement('div');
+      overlay.className = 'overlay';
+
+      const popup = document.createElement('div');
+      popup.className = 'emoji-popup';
+
+      const emojis = ['❤️', '👍', '👎', '😂', '‼️', '❓'];
+      emojis.forEach((emoji) => {
+        const e = document.createElement('div');
+        e.textContent = emoji;
+        if (emoji === '❤️') {
+          e.onclick = () => {
+            document.body.removeChild(overlay);
+            triggerEmojiExplosionAndRedirect();
+          };
+        }
+        popup.appendChild(e);
+      });
+
+      overlay.appendChild(popup);
+      document.body.appendChild(overlay);
+    }
+
     function triggerEmojiExplosionAndRedirect() {
       const emojis = ['😍', '😎', '🥰', '💕', '❤️'];
       const explosionContainer = document.createElement('div');
@@ -302,16 +359,8 @@
         emoji.style.left = '50%';
         emoji.style.top = '50%';
         emoji.style.fontSize = '28px';
-        emoji.style.transition = 'transform 1s ease-out, opacity 1s ease-out';
-
-        const angle = Math.random() * 2 * Math.PI;
-        const radius = 150 + Math.random() * 300;
-        const x = Math.cos(angle) * radius;
-        const y = Math.sin(angle) * radius;
-
-        emoji.style.setProperty('--x', `${x}px`);
-        emoji.style.setProperty('--y', `${y}px`);
-
+        emoji.style.setProperty('--x', `${Math.random() * 400 - 200}px`);
+        emoji.style.setProperty('--y', `${Math.random() * 400 - 200}px`);
         emoji.style.animation = `emojiExplosion 1s forwards`;
         explosionContainer.appendChild(emoji);
       }
