--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
     }
 
     .image-message:active {
-      transform: scale(1.05);
+      transform: scale(2.05);
       filter: brightness(85%);
     }
 
@@ -190,8 +190,8 @@
     left: 0;
     width: 390px;
     height: 844px;
-    backdrop-filter: blur(12px);
-    background-color: rgba(255, 255, 255, 0.5); /* 배경을 더욱 흐리게 */
+    backdrop-filter: blur(30px);
+    background-color: rgba(255, 255, 255, 0.1); /* 배경을 더욱 흐리게 */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -200,9 +200,8 @@
 
 .emoji-popup {
   position: absolute;
-  top: 0;
-  left: 100%;
-  transform: translateX(10px) translateY(10px); /* 오른쪽 상단 위치 */
+  top: -20px;
+  right: 0;
   display: flex;
   background: white;
   padding: 12px 16px;
