--- a/about.html
+++ b/about.html
@@ -180,7 +180,7 @@
     }
 
     .image-message:active {
-      transform: scale(2.05);
+      transform: scale(5);
       filter: brightness(85%);
     }
 
@@ -202,9 +202,9 @@
     }
 
     .zoom-out {
-      transform: scale(2.05);
-      transition: transform 0.3s ease;
-      z-index: 10; /* 팝업보다 낮게 */
+      transform: scale(1.05);
+      opacity: 0;
+      transition: transform 0.4s ease, opacity 0.4s ease;
     }
 
     /* 새로 추가: 오버레이 + 이모티콘 UI */
@@ -215,7 +215,7 @@
       width: 390px;
       height: 844px;
       backdrop-filter: blur(30px);
-      background-color: rgba(255, 255, 255, 0.8);
+      background-color: rgba(255, 255, 255, 0.5);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -224,7 +224,6 @@
 
     .emoji-popup {
       display: flex;
-      position: absolute; /* 추가 */
       background: white;
       padding: 12px 16px;
       border-radius: 24px;
@@ -270,46 +269,11 @@
         img.src = 'images/m2.png';
         img.className = 'image-message';
 
-      img.onclick = (e) => {
-        e.preventDefault();
-        img.classList.add('image-zoomed');
-        showEmojiPopup(img);
-};
-        wrapper.appendChild(img); // ❗이게 빠져 있었음!
-    };
-
-// showEmojiPopup 함수 수정
-function showEmojiPopup(img) {
-  const overlay = document.createElement('div');
-  overlay.className = 'overlay';
-  overlay.style.backdropFilter = 'blur(30px)';
-  overlay.style.backgroundColor = 'rgba(255, 255, 255, 0.3)';
-  
-  const popup = document.createElement('div');
-  popup.className = 'emoji-popup';
-
-  const emojis = ['❤️', '👍', '👎', '😂', '‼️', '❓'];
-  emojis.forEach((emoji) => {
-    const e = document.createElement('div');
-    e.textContent = emoji;
-    if (emoji === '❤️') {
-      e.onclick = () => {
-        document.body.removeChild(overlay);
-        triggerEmojiExplosionAndRedirect();
-      };
-    }
-    popup.appendChild(e);
-  });
-
-  // 이미지의 오른쪽 상단에 이모티콘 팝업을 배치
-  const imgRect = img.getBoundingClientRect();
-  popup.style.position = 'absolute';
-  popup.style.top = `${imgRect.top - 40}px`;       // 이미지보다 약간 위
-  popup.style.left = `${imgRect.right - 80}px`;    // 이미지 오른쪽 상단
-
-  overlay.appendChild(popup);
-  document.body.appendChild(overlay);
-}
+        img.onclick = (e) => {
+          e.preventDefault();
+          img.classList.add('zoom-out');
+          showEmojiPopup();
+        };
 
         wrapper.appendChild(img);
       } else {
@@ -352,6 +316,9 @@ function showEmojiPopup(img) {
       input.value = '';
     }
 
+    function showEmojiPopup() {
+      const overlay = document.createElement('div');
+      overlay.className = 'overlay';
 
       const popup = document.createElement('div');
       popup.className = 'emoji-popup';
