--- a/about.html
+++ b/about.html
@@ -177,6 +177,7 @@
       animation: messageSend 0.3s ease forwards;
       transition: transform 0.15s ease, filter 0.15s ease;
       cursor: pointer;
+      filter: none;
     }
 
     .image-message:active {
