--- a/about.html
+++ b/about.html
@@ -182,7 +182,6 @@
 
     .image-message:active {
       transform: scale(5);
-      filter: brightness(85%);
     }
 
     @keyframes emojiExplosion {
@@ -224,6 +223,8 @@
     }
 
     .emoji-popup {
+      position: absolute;
+      transform: translate(-50%, -100%);      
       display: flex;
       background: white;
       padding: 12px 16px;
@@ -232,6 +233,7 @@
       gap: 12px;
       font-size: 24px;
       cursor: pointer;
+      z-index: 1001;
     }
 
     .emoji-popup div {
@@ -339,6 +341,13 @@
 
       overlay.appendChild(popup);
       document.body.appendChild(overlay);
+
+      const rect = img.getBoundingClientRect();
+      popup.style.position = 'absolute';
+      popup.style.left = `${rect.left + rect.width / 2}px`; // 가운데 정렬
+      popup.style.top = `${rect.top}px`; // 이미지 상단 기준
+      popup.style.transform = 'translate(-50%, -100%)'; // 상단에 뜨게
+      
     }
 
     function triggerEmojiExplosionAndRedirect() {
