--- a/about.html
+++ b/about.html
@@ -168,7 +168,7 @@
         opacity: 1;
       }
     }
-    
+
     .image-message {
       width: 200px;
       border-radius: 18px;
@@ -181,7 +181,7 @@
 
     .image-message:active {
       transform: scale(5);
-      filter: none;
+      filter: brightness(85%);
     }
 
     @keyframes emojiExplosion {
@@ -220,11 +220,11 @@
       justify-content: center;
       align-items: center;
       z-index: 1000;
-      
     }
 
     .emoji-popup {
       display: flex;
+      top: -50px;
       background: white;
       padding: 12px 16px;
       border-radius: 24px;
