--- a/about.html
+++ b/about.html
@@ -222,22 +222,6 @@
       z-index: 1000;
     }
     
-.overlay-blur {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  backdrop-filter: blur(30px);
-  background-color: rgba(255, 255, 255, 0.7);
-  z-index: 0;
-  pointer-events: none;
-}
-
-.emoji-popup2 {
-  z-index: 1;
-  pointer-events: auto;
-}
     .emoji-popup {
       display: flex;
       background: white;
@@ -335,10 +319,18 @@
     function showEmojiPopup() {
       const overlay = document.createElement('div');
       overlay.className = 'overlay';
-      
-      const blurBg = document.createElement('div');
-      blurBg.className = 'overlay-blur';
-      overlay.appendChild(blurBg);
+
+       // 👉 원본 이미지 복사해서 overlay 위에 다시 표시
+  const imgClone = originalImage.cloneNode();
+  imgClone.style.position = 'absolute';
+  const rect = originalImage.getBoundingClientRect();
+  imgClone.style.top = rect.top + 'px';
+  imgClone.style.left = rect.left + 'px';
+  imgClone.style.width = rect.width + 'px';
+  imgClone.style.height = rect.height + 'px';
+  imgClone.style.zIndex = '1001';
+  imgClone.style.objectFit = 'cover';
+  imgClone.style.borderRadius = '18px';
 
       const popup = document.createElement('div');
       popup.className = 'emoji-popup';
