--- a/photos.html
+++ b/photos.html
@@ -85,8 +85,6 @@
       flex-direction: column;
       align-items: center;
       color: #8e8e93;
-      position: relative;
-      cursor: pointer;
     }
 
     .tab-item.active {
@@ -98,32 +96,36 @@
       height: 24px;
       margin-bottom: 4px;
       fill: currentColor;
+      transition: transform 0.3s ease;
     }
 
-    /* 하트 이모티콘 애니메이션 */
+    /* "For You" 하트 아이콘의 빨간색 변환과 애니메이션 */
     .tab-item.heart {
-      position: relative;
-      animation: floatingHeart 2s ease-in-out infinite;
+      cursor: pointer;
+    }
+
+    .tab-item.heart svg {
+      fill: #8e8e93; /* 기본 색상 */
+      transition: fill 0.3s ease;
     }
 
     .tab-item.heart.active svg {
-      fill: red;
+      fill: #FF3B30; /* 빨간색 하트 */
+      animation: floatHeart 1s infinite; /* 하트 애니메이션 */
     }
 
-    @keyframes floatingHeart {
+    @keyframes floatHeart {
       0% {
-        opacity: 1;
         transform: translateY(0);
       }
       50% {
-        opacity: 0.5;
         transform: translateY(-10px);
       }
       100% {
-        opacity: 1;
         transform: translateY(0);
       }
     }
+
   </style>
 </head>
 <body>
@@ -155,17 +157,39 @@
       <div>보관함</div>
     </div>
     <div class="tab-item">
-      <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 
+      5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 
+      2.09C13.09 3.81 14.76 3 16.5 3 19.58 
+      3 22 5.42 22 8.5c0 3.78-3.4 
+      6.86-8.55 11.54L12 21.35z"/></svg>
       <div>For You</div>
     </div>
-    <div class="tab-item active heart" onclick="window.location.href='applemusic.html'">
-      <svg viewBox="0 0 24 24"><path d="M4 4h16v2H4V4zm0 4h10v2H4V8zm0 4h16v2H4v-2zm0 4h10v2H4v-2z"/></svg>
-      <div>앨범</div>
+    <div class="tab-item heart" onclick="window.location.href='applemusic.html';">
+      <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 
+      5.42 4.42 3 7.5 3c1.74 0 3.41 0.81 4.5 
+      2.09C13.09 3.81 14.76 3 16.5 3 19.58 
+      3 22 5.42 22 8.5c0 3.78-3.4 
+      6.86-8.55 11.54L12 21.35z"/></svg>
+      <div>For You</div>
     </div>
     <div class="tab-item">
-      <svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0016 9.5 6.5 6.5 0 109.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C8.01 14 6 11.99 6 9.5S8.01 5 10.5 5 15 7.01 15 9.5 12.99 14 10.5 14z"/></svg>
+      <svg viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 
+      6.471 0 0016 9.5 6.5 6.5 0 109.5 
+      16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 
+      4.99L20.49 19l-4.99-5zm-6 
+      0C8.01 14 6 11.99 6 9.5S8.01 
+      5 10.5 5 15 7.01 15 9.5 12.99 
+      14 10.5 14z"/></svg>
       <div>검색</div>
     </div>
   </div>
+
+  <script>
+    const heartButton = document.querySelector('.tab-item.heart');
+    
+    heartButton.addEventListener('click', () => {
+      heartButton.classList.toggle('active');
+    });
+  </script>
 </body>
 </html>
